fix: Fix row gap, column gap issues.

--- a/src/app/class-routine-form/class-routine-form.component.scss
+++ b/src/app/class-routine-form/class-routine-form.component.scss
@@ -26,18 +26,23 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        gap: 16px;
+        column-gap: 16px;
       }
       .teacher-info-section {
         .teacher-details-area {
           display: flex;
           flex-direction: column;
           gap: 12px;
-          .teacher-fields {
+          .teachers-area {
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             flex-wrap: wrap;
-            gap: 16px;
+            .teacher-item {
+              display: flex;
+              flex-direction: row;
+              flex-wrap: wrap;
+              column-gap: 16px;
+            }
           }
         }
       }
@@ -49,7 +54,6 @@
           .rooms-area {
             display: flex;
             flex-direction: column;
-            gap: 24px;
             .room-item {
               .lab-course-field {
                 margin-left: 12px;
